# Download-Sorter

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  file_watcher.rs  main.rs  utils.rs
