[package]
name = "file_sorter"
version = "0.1.0"
authors = ["Timothy Odebunmi <dev.brymes@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.20"
notify = { version = "6.1.1", features = ["serde"] }
notify-debouncer-full = "0.3.1"
shellexpand = "2.1"
chrono = "0.4.31"
log4rs = "0.8"
error-chain = "0.12.4"
clap = { version = "4.4.8", features = ["derive"] }
